--- a/Window Full.workflow/Contents/Info.plist
+++ b/Window Full.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Full Screen</string>
+				<string>Window Full</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
