--- a/Window Left.workflow/Contents/Info.plist
+++ b/Window Left.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Screen Left</string>
+				<string>Window Left</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
